--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
         android:gravity="center"
         android:padding="10dp"
         android:layout_below="@id/linearLayout1"
-        android:text="My To Do List"
+        android:text="to do list saya"
         android:textSize="20dp"
         android:textColor="@color/black" />
 
